Redesign smart notification center with sound
